force-app/main/default/objects/sfmc_journey_534007695__dll/fields/KQ_ID__c.field-meta.xml
<CustomField>
    <fullName>KQ_ID__c</fullName>
    <label>KQ_ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KQ_ID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>KEY_QUALIFIER</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>