force-app/main/default/objects/sfmc_journey_534007695__dll/fields/LastPublishedDate__c.field-meta.xml
<CustomField>
    <fullName>LastPublishedDate__c</fullName>
    <label>Last Published Date</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>LastPublishedDate</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>