force-app/main/default/objects/sfmc_journey_534007695__dll/fields/VersionID__c.field-meta.xml
<CustomField>
    <fullName>VersionID__c</fullName>
    <label>VersionID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>VersionID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>